--- a/index.html
+++ b/index.html
@@ -38,9 +38,28 @@
     <h2>Kontakti</h2>
     <p>Labrīt, labdien, labvakar!
     <br>
-    Sazvani mani 26 26 24 34
-    <br>
-    Uzraksti man kristine@briede.lv
+    <table>
+        <tbody>
+            <tr>
+                <td>Sazvani mani </td>
+                <td><a href="26 26 24 34">26262434</a></td>
+            </tr>
+        </tbody>
+        <tbody>
+            <tr>
+                <td>Uzraksti man </td>
+                <td><a href="mailto:kristine@briede?Subject=Sveika,%20Kristine!">kristine@briede.lv</a></td>
+            </tr>
+        </tbody>
+        <tbody>
+            <tr>
+                <td>Apskati mani</td>
+                <td><a href="https://www.facebook.com/kristine.briede.98"><img src="FB_button.jpg" 
+                    border="0" width="100" height="100" alt="Facebook logo"></td>
+            </tr>
+        </tbody>
+    </table>
+
     <br>
     Apskati mani Facebook!</p>
 
