--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
         <tbody>
             <tr>
                 <td>Apskati mani</td>
-                <td><a href="https://www.facebook.com/kristine.briede.98"><img src="FB_button.jpg" 
-                    border="0" width="100" height="100" alt="Facebook logo"></td>
+                <td><a href="https://www.facebook.com/kristine.briede.98"><img src="FB_button.jpg"
+                    alt="Facebook logo"></td>
             </tr>
         </tbody>
     </table>
