Added FB button

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <tbody>
             <tr>
                 <td>Sazvani mani </td>
-                <td><a href="26 26 24 34">26262434</a></td>
+                <td><a href="+37126262434">26 26 24 34</a></td>
             </tr>
         </tbody>
         <tbody>
@@ -54,7 +54,7 @@
         <tbody>
             <tr>
                 <td>Apskati mani</td>
-                <td><a href="https://www.facebook.com/kristine.briede.98"><img src="FB_button.jpg"
+                <td><a href="https://www.facebook.com/kristine.briede.98"><img src="FB_button_2.png"
                     alt="Facebook logo"></td>
             </tr>
         </tbody>
