Changed code for FB button

--- a/index.html
+++ b/index.html
@@ -54,14 +54,13 @@
         <tbody>
             <tr>
                 <td>Apskati mani</td>
-                <td><a href="https://www.facebook.com/kristine.briede.98"><img src="FB_button_2.png"
-                    alt="Facebook logo"></td>
+                <td><a href="https://www.facebook.com/kristine.briede.98">
+                    <img src="FB_button_2.png" alt="Facebook logo">
+                    </a>
+                </td>
             </tr>
         </tbody>
     </table>
-
-    <br>
-    Apskati mani Facebook!</p>
 
     <h2>Mans CV</h2>
     Tabula
