Changed FB button image

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <tr>
                 <td>Apskati mani</td>
                 <td><a href="https://www.facebook.com/kristine.briede.98">
-                    <img src="FB_button_2.png" alt="Facebook logo">
+                    <img src="https://www.facebook.com/images/fb_icon_325x325.png" alt="Facebook logo">
                     </a>
                 </td>
             </tr>
