Added text to CV

--- a/index.html
+++ b/index.html
@@ -63,8 +63,59 @@
     </table>
 
     <h2>Mans CV</h2>
-    Tabula
-    <p></p>
+    <p> IZGLĪTĪBA
+    <table>
+        <tbody>
+            <tr>
+                <td>2012.-2016.</td>
+                <td>Latvijas Universitāte, Juridiskā fakultāte</td>
+            </tr>
+        </tbody>
+        <tbody>
+            <tr>
+                <td>2008.-2011.</td>
+                <td>Smiltenes ģimnāzija, matemātikas novirziena klase</td>
+            </tr>
+        </tbody>
+    </table>
+    </p>
+    <br>
+    <p> DARBA PIEREDZE
+        <table>
+            <tbody>
+                <tr>
+                    <td>06.11.2017. – 15.03.2018.</td>
+                    <td>Apdrošināšanas kompānija ADB „Gjensidige” Latvijas filiāle, Brīvības iela 39, Rīga</td>
+                    <td>Mārketinga un komunikācijas projektu vadītāja</td>
+                    <td>Pienākumi:
+                        <ul>Sadarbība ar departamenta vadītāju un mārketinga aktivitāšu plānošana, nodrošināšana.</ul>
+                        <ul>Uzņēmuma mājaslapas un iekšējā intraneta papildināšana ar saturu.</ul>
+                        <ul>Uzņēmuma sociālo tīklu uzturēšana.</ul>
+                        <ul>Poligrāfijas materiālu kontrole un pasūtīšana</ul>
+                        <ul>Nesarežģīta līmeņa materiālu izstrāde, koriģēšana, maketēšana programmās Adobe Illustrator un Adobe Photoshop.</ul>
+                    </td>
+                </tr>
+            </tbody>
+            <tbody>
+                <tr>
+                    <td>15.03.2017. – 03.11.2017.
+                    <br>01.10.2013. - 16.10.2015.</td>
+                    <td>Reklāmas aģentūra SIA „SOMESE Baltic”, Šķūņu iela 6-5, Rīga</td>
+                    <td>Prokūriste, klientu direktore (15.03. – 03.11.)
+                    <br>Projektu vadītāja (01.10.13.-16.10.15.)</td>
+                    <td>Pienākumi:
+                        <ul>Ar uzņēmuma vadību saistītu jautājumu risināšana.</ul>
+                        <ul>Darbs ar uzņēmuma klientiem, sadarbības partneriem.</ul>
+                        <ul>Dažāda veida un apjoma projektu vadība Latvijā, Lietuvā, Igaunijā.</ul>
+                        <ul>Aktivitāšu saskaņošana ar institūcijām.</ul>
+                        <ul>Dizaina izstrādes koordinēšana, WEB lapu izstrādes koordinēšana.</ul>
+                        <ul>Projektu peļņas kalkulācija, rēķinu sagatavošana, statistikas izstrāde un uzturēšana, visu projekta ietvaros esošo darbu koordinēšana un veikšana.</ul>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+        </p>
+
 
 </body>
 </html>
