FB logo changes

--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
             <tr>
                 <td>Apskati mani</td>
                 <td><a href="https://www.facebook.com/kristine.briede.98">
-                    <img src="https://www.facebook.com/images/fb_icon_325x325.png" alt="Facebook logo">
+                    <img src="https://www.facebook.com/images/fb_icon_325x325.png" alt="Facebook logo" 
+                    style="width:42px;height:42px;border:50%">
                     </a>
                 </td>
             </tr>
