--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Personal webpage of Kristine Briede</title>
-    <link rel="stylesheet" href="Styles/stylesheet.css">
+    <link href="Styles/stylesheet.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
