--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
 <body>
     <nav>
-        <button>Par mani</button>
-        <button>CV</button>
-        <button>Kontakti</button>
+        <button class="nav button">Par mani</button>
+        <button class="nav button">CV</button>
+        <button class="nav button">Kontakti</button>
     </nav>
 
     <main>
