--- a/index.html
+++ b/index.html
@@ -4,22 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
     <title>Personal webpage of Kristine Briede</title>
     <link href="Styles/stylesheet.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
     <nav>
-        <button class="nav button">Par mani</button>
-        <button class="nav button">CV</button>
-        <button class="nav button">Kontakti</button>
+        <button class="navbutton" <a href="#Par-mani">Par mani</button>
+        <button class="navbutton"<a href="#Kontakti">Kontakti</button>
+        <button class="navbutton" <a href="#Mans-CV">CV</button>
     </nav>
 
     <main>
     <h1>Sveiki, mani sauc Kristīne Briede!</h1> 
     </main>
 
-    <h2>Par mani</h2>
+    <h2 id="Par-mani">Par mani</h2>
     <p>Čau! Mani sauc Kristīne. Es esmu dzimusi 1992. gada 9. augustā - mana mamma regulāri, 
         kad ir runa par manu dzimšanas dienu, mēdz pieminēt, ka 92. gada 9. augusts esot bijusi svētdiena
     un ļoti saulaina diena. Šķiet, ka viņa tic, ka tā ir atslēga manai pesonībai. Piedzimu es Smiltenē, bet 
@@ -35,7 +36,7 @@
     deva mirkli pārdomām, kas rezultējās ar mešanos iekšā jaunos dzīves izaicinājumos - te, lūk, es arī 
     esmu!
 
-    <h2>Kontakti</h2>
+    <h2 id="Kontakti">Kontakti</h2>
     <p>Labrīt, labdien, labvakar!
     <br>
     <table>
@@ -63,7 +64,7 @@
         </tbody>
     </table>
 
-    <h2>Mans CV</h2>
+    <h2 id="Mans-CV">Mans CV</h2>
     <p> IZGLĪTĪBA
     <table>
         <tbody>
