Added background pic

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 <body>
     <nav>
-        <button class="navbutton" <a href="#Par-mani">Par mani</button>
-        <button class="navbutton"<a href="#Kontakti">Kontakti</button>
-        <button class="navbutton" <a href="#Mans-CV">CV</button>
+        <a href='#Par-mani'><button class="navbutton">Par mani</button></a>
+        <a href='#Kontakti'><button class="navbutton">Kontakti</button></a>
+        <a href='#Mans-CV'><button class="navbutton">CV</button></a>
     </nav>
 
     <main>
