--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
 </head>
 
 <body>
+    <div id=navigation>
     <nav>
         <a href='#Par-mani'><button class="navbutton">Par mani</button></a>
         <a href='#Kontakti'><button class="navbutton">Kontakti</button></a>
         <a href='#Mans-CV'><button class="navbutton">CV</button></a>
     </nav>
+    </div>
 
     <main>
     <h1>Sveiki, mani sauc Kristīne Briede!</h1> 
@@ -36,20 +38,21 @@
     deva mirkli pārdomām, kas rezultējās ar mešanos iekšā jaunos dzīves izaicinājumos - te, lūk, es arī 
     esmu!
 
-    <h2 id="Kontakti">Kontakti</h2>
+
+    <h2>Kontakti</h2>
     <p>Labrīt, labdien, labvakar!
     <br>
     <table>
         <tbody>
             <tr>
                 <td>Sazvani mani </td>
-                <td><a href="+37126262434">26 26 24 34</a></td>
+                <td><a href="+37126262434" class="kontakti">26 26 24 34</a></td>
             </tr>
         </tbody>
         <tbody>
             <tr>
                 <td>Uzraksti man </td>
-                <td><a href="mailto:kristine@briede?Subject=Sveika,%20Kristine!">kristine@briede.lv</a></td>
+                <td><a href="mailto:kristine@briede?Subject=Sveika,%20Kristine!" class="kontakti">kristine@briede.lv</a></td>
             </tr>
         </tbody>
         <tbody>
@@ -63,6 +66,7 @@
             </tr>
         </tbody>
     </table>
+
 
     <h2 id="Mans-CV">Mans CV</h2>
     <p> IZGLĪTĪBA
