--- a/index.html
+++ b/index.html
@@ -23,23 +23,16 @@
     </main>
 
     <h2 id="Par-mani">Par mani</h2>
-    <p>Čau! Mani sauc Kristīne. Es esmu dzimusi 1992. gada 9. augustā - mana mamma regulāri, 
-        kad ir runa par manu dzimšanas dienu, mēdz pieminēt, ka 92. gada 9. augusts esot bijusi svētdiena
-    un ļoti saulaina diena. Šķiet, ka viņa tic, ka tā ir atslēga manai pesonībai. Piedzimu es Smiltenē, bet 
-    dzīvoju nelielā ciemā Grundzālē, kas atradās 27km no tās. Šajā ciemā arī pabeidzu pamatskolu, kurā 
-    strādāja mana mamma. Vēlāk pabeidzu arī ģimnāziju Smiltenē un vēl vēlāk arī ieguvu bakalaura grādu
-    tiesību zinātnēs augstskolā Rīgā, lai gan, teikšu godīgi - lai arī man skaitās laba izglītība, es 
-    tomēr ticu, ka sadzīvē emocionālā inteliģence stāv mazliet pāri akadēmiskajai inteliģencei.
-    <br>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat quae, vero, obcaecati et soluta sunt illum eaque quia, deserunt delectus omnis. Temporibus quia nostrum, sequi consectetur corrupti quae porro veniam!
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt dolor pariatur et, blanditiis quod praesentium laudantium nemo ipsa dolore vel dicta laboriosam neque assumenda, eum quisquam amet labore expedita ullam.
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis maiores sequi debitis beatae, laborum minima sed ipsam ipsum sit cum praesentium excepturi iure eius inventore ex saepe rem magni non.
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id ipsam, obcaecati ipsa dolorem maiores exercitationem voluptatum magni praesentium quis! Corporis pariatur ducimus, amet fuga distinctio maxime voluptatibus? Consequatur, rerum eos!
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga consectetur accusamus repellat quasi, rerum voluptate qui recusandae in. Fugit, laboriosam deserunt. Praesentium magnam sed beatae harum possimus tenetur at commodi?
     </p>
-    Pavisam neplānoti dzīve mani aizveda līdz projektu vadītājas darbam reklāmas aģentūrā - savs
-    spožums un posts ar to visu. Reklāma, radošums un citas lietas, ko šī nozare nes sev līdz, man patika
-    un patīk, bet, vienas mazas būtnes ienākšana pasaulē, kas norāva sava veida rokasbremzi manai dzīvei,
-    deva mirkli pārdomām, kas rezultējās ar mešanos iekšā jaunos dzīves izaicinājumos - te, lūk, es arī 
-    esmu!
 
 
-    <h2>Kontakti</h2>
+
+    <h2 id="Kontakti">Kontakti</h2>
     <p>Labrīt, labdien, labvakar!
     <br>
     <table>
