--- a/index.html
+++ b/index.html
@@ -5,116 +5,101 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
-    <title>Personal webpage of Kristine Briede</title>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+    <title>Zvaigznes</title>
     <link href="Styles/stylesheet.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
     <div id=navigation>
     <nav>
-        <a href='#Par-mani'><button class="navbutton">Par mani</button></a>
-        <a href='#Kontakti'><button class="navbutton">Kontakti</button></a>
-        <a href='#Mans-CV'><button class="navbutton">CV</button></a>
+        <a href='#Par-zvaigznem'><button class="navbutton">Apraksts</button></a>
+        <div class="divider"/>
+        <a href='#Kimiskais-sastavs'><button class="navbutton">Ķīmiskais sastāvs</button></a>
+        <div class="divider"/>
+        <a href='#Zvaigznu-muzs'><button class="navbutton">Zvaigžņu mūžs</button></a>
     </nav>
     </div>
 
     <main>
-    <h1>Sveiki, mani sauc Kristīne Briede!</h1> 
+    <div id="citats">
+    <h1>Smagums mani tur pie zemes, 
+        <br>
+        kaut tik daudz zvaigžņu
+        <br>
+        velk uz savu pusi.</h1>
+        <p id="autors">/Antuāns de Sent-Ekziperī/</p>
+    </div>
     </main>
 
-    <h2 id="Par-mani">Par mani</h2>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat quae, vero, obcaecati et soluta sunt illum eaque quia, deserunt delectus omnis. Temporibus quia nostrum, sequi consectetur corrupti quae porro veniam!
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt dolor pariatur et, blanditiis quod praesentium laudantium nemo ipsa dolore vel dicta laboriosam neque assumenda, eum quisquam amet labore expedita ullam.
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis maiores sequi debitis beatae, laborum minima sed ipsam ipsum sit cum praesentium excepturi iure eius inventore ex saepe rem magni non.
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id ipsam, obcaecati ipsa dolorem maiores exercitationem voluptatum magni praesentium quis! Corporis pariatur ducimus, amet fuga distinctio maxime voluptatibus? Consequatur, rerum eos!
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga consectetur accusamus repellat quasi, rerum voluptate qui recusandae in. Fugit, laboriosam deserunt. Praesentium magnam sed beatae harum possimus tenetur at commodi?
-    </p>
-
-
-
-    <h2 id="Kontakti">Kontakti</h2>
-    <p>Labrīt, labdien, labvakar!
-    <br>
-    <table>
-        <tbody>
-            <tr>
-                <td>Sazvani mani </td>
-                <td><a href="+37126262434" class="kontakti">26 26 24 34</a></td>
-            </tr>
-        </tbody>
-        <tbody>
-            <tr>
-                <td>Uzraksti man </td>
-                <td><a href="mailto:kristine@briede?Subject=Sveika,%20Kristine!" class="kontakti">kristine@briede.lv</a></td>
-            </tr>
-        </tbody>
-        <tbody>
-            <tr>
-                <td>Apskati mani</td>
-                <td><a href="https://www.facebook.com/kristine.briede.98">
-                    <img src="https://www.facebook.com/images/fb_icon_325x325.png" alt="Facebook logo" 
-                    style="width:42px;height:42px;border:50%">
-                    </a>
-                </td>
-            </tr>
-        </tbody>
-    </table>
-
-
-    <h2 id="Mans-CV">Mans CV</h2>
-    <p> IZGLĪTĪBA
-    <table>
-        <tbody>
-            <tr>
-                <td>2012.-2016.</td>
-                <td>Latvijas Universitāte, Juridiskā fakultāte</td>
-            </tr>
-        </tbody>
-        <tbody>
-            <tr>
-                <td>2008.-2011.</td>
-                <td>Smiltenes ģimnāzija, matemātikas novirziena klase</td>
-            </tr>
-        </tbody>
-    </table>
-    </p>
-    <br>
-    <p> DARBA PIEREDZE
-        <table>
-            <tbody>
-                <tr>
-                    <td>06.11.2017. – 15.03.2018.</td>
-                    <td>Apdrošināšanas kompānija ADB „Gjensidige” Latvijas filiāle, Brīvības iela 39, Rīga</td>
-                    <td>Mārketinga un komunikācijas projektu vadītāja</td>
-                    <td>Pienākumi:
-                        <ul>Sadarbība ar departamenta vadītāju un mārketinga aktivitāšu plānošana, nodrošināšana.</ul>
-                        <ul>Uzņēmuma mājaslapas un iekšējā intraneta papildināšana ar saturu.</ul>
-                        <ul>Uzņēmuma sociālo tīklu uzturēšana.</ul>
-                        <ul>Poligrāfijas materiālu kontrole un pasūtīšana</ul>
-                        <ul>Nesarežģīta līmeņa materiālu izstrāde, koriģēšana, maketēšana programmās Adobe Illustrator un Adobe Photoshop.</ul>
-                    </td>
-                </tr>
-            </tbody>
-            <tbody>
-                <tr>
-                    <td>15.03.2017. – 03.11.2017.
-                    <br>01.10.2013. - 16.10.2015.</td>
-                    <td>Reklāmas aģentūra SIA „SOMESE Baltic”, Šķūņu iela 6-5, Rīga</td>
-                    <td>Prokūriste, klientu direktore (15.03. – 03.11.)
-                    <br>Projektu vadītāja (01.10.13.-16.10.15.)</td>
-                    <td>Pienākumi:
-                        <ul>Ar uzņēmuma vadību saistītu jautājumu risināšana.</ul>
-                        <ul>Darbs ar uzņēmuma klientiem, sadarbības partneriem.</ul>
-                        <ul>Dažāda veida un apjoma projektu vadība Latvijā, Lietuvā, Igaunijā.</ul>
-                        <ul>Aktivitāšu saskaņošana ar institūcijām.</ul>
-                        <ul>Dizaina izstrādes koordinēšana, WEB lapu izstrādes koordinēšana.</ul>
-                        <ul>Projektu peļņas kalkulācija, rēķinu sagatavošana, statistikas izstrāde un uzturēšana, visu projekta ietvaros esošo darbu koordinēšana un veikšana.</ul>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+    <article>
+    <h2 class="hederi" id="Par-zvaigznem">Apraksts</h2>
+        <img class="sadalu-bildes" src="Styles\Images\star-h1.jpg" alt="Zvaigzne galaktikā">
+        <p>Zemei tuvākā zvaigzne (neskaitot Sauli) ir Centaura Alfa, kura atrodas nepilnu 4,3 
+            gaismas gadu attālumā no Zemes. Vislabāk kosmosā izpētītas ir Saulei tuvākās 
+            zvaigznes. Savukārt 20 gaismas gadu attālumā Saulei tuvākās ir aptuveni 100 zvaigznes. 
+            Tomēr lielie attālumi līdz zvaigznēm mūsdienās nav šķērslis, lai tās izpētītu.
+            <br>
+            <br>
+            Dažas zvaigznes Visumā ir ļoti līdzīgas Saulei, citas ir savādākas. 
+            <br>
+            <br>
+            Tās atšķiras gan pēc spožuma, gan pēc krāsas — ir zilas, sarkanas, dzeltenas, 
+            oranžas zvaigznes. Lielās atšķirības zvaigznēm var noteikt, pētot ar teleskopu. 
+            Pētot ar teleskopu, tika atklātas ļoti daudz un dažādas zvaigžņu atšķirības.
         </p>
+    </article>
 
+
+    <h2 class="hederi" id="Kimiskais-sastavs">Ķīmiskais sastāvs</h2>
+    <img class="sadalu-bildes" src="Styles\Images\chemicals.jpg" alt="Zvaigžņu ķīmiskais sastāvs">
+    <p>Zvaigznes sastāv no 70% ūdeņraža un 28% hēlija, kā arī no smagākiem elementiem. 
+        Daļa smagāko elementu tiek mērīti dzelzs satura izteiksmē zvaigžņu atmosfērā, 
+        jo dzelzs ir kopīgs elements un to ir relatīvi viegli izmērīt. Tā kā ir molekulārie mākoņi, 
+        kuros zvaigznes ir bagātinātas ar smagākajiem elementiem no pārnovu sprādzieniem, to 
+        zvaigžņu ķīmisko sastāvu noteikšana var tikt lietota kā zvaigžņu vecuma noteikšana. 
+        Daļa smagāko elementu var arī būt kā varbūtības rādītājs, ka zvaigznēm ir planētu sistēma.
+        Zvaigzne ar zemāko dzelzs saturu, kura ir izmērīta, ir punduris HE1327-2326. 
+        <br>
+        <br>
+        Kā pretstats, zvaigznei, kas pārbagāta ar metāliem μ Leonis ir tikpat kā dubultliels 
+        dzelzs sastāvs kā Saulei, toties planētai-zvaigznei 14 Herculis dzelzs daudzums ir tikpat 
+        kā trīskāršots.
+    </p>
+
+
+    <h2 class="hederi" id="Zvaigznu-muzs">Zvaigžņu mūžs</h2>
+    <img class="sadalu-bildes" src="Styles\Images\star-fall.jpg" alt="Krītoša zvaigzne">
+    <p>Zvaigžņu mūžs var ilgt miljoniem un pat miljardiem gadu. 
+        <br>
+        <br>
+        Zvaigznes veidojas no 
+        starpzvaigžņu gāzes vai putekļu mākoņiem, kas ar laiku saspiežas. Tiem saspiežoties, 
+        sāk izdalīties siltums, kas paaugstina mākoņu temperatūru līdz sākas kodolreakcijas. 
+        Kad zvaigznē ūdeņraža krājumi ir izsīkuši, tā atdziest un izplešas ārējais apvalks un 
+        kļūst par sarkano milzi. Tālākā zvaigznes attīstība un evolūcija ir atkarīga no zvaigznes 
+        masas.
+        <br>
+        <br>
+        Ja zvaigznes masa ir neliela, no tās centrālās daļas izveidojas baltais punduris, 
+        apvalks tiek nomests un tas izveido miglāju.
+        <br>
+        <br>
+        Ja zvaigžņu masa ir liela, tajā rodas arvien jauni ķīmiskie elementi, 
+        kodols saspiežas un apvalks tiek nomests pārnovas sprādziena rezultātā. 
+        Un atkal tālākais zvaigznes mūžs ir atkarīgs no palikušās masas. Ja tā nav pārāk liela, 
+        izveidojas neitrona zvaigzne. Neitrona zvaigznes ir ļoti mazas, to diametrs ir apmēram 20-30 km. 
+        Tām ir liels blīvums, tās ir karstas un ātri griežas. Neitronu zvaigznes gabals metamā kauliņa 
+        lielumā sver simtiem miljonu tonnu. Ja zvaigznes atlikusī masa ir lielāka par divkāršotu Saules 
+        masu, tad spēcīgās saspiešanas — gravitācijas kolapsa - rezultātā izveidojas melnais caurums. 
+        Melnie caurumi ir ļoti mazi. Visumā veidojas „melnie tukšumi” un tikai spēcīgākas gravitācijas 
+        dēļ, var noteikt, ka tur ir melnais caurums. Melnā cauruma tuvumā mainās telpa un laiks. To var 
+        ieraudzīt tikai tad, ja tajā krīt viela, kas izstaro.
+    </p>
+
+    <p>
+        <a id="vairak-info" href="https://lv.wikipedia.org/wiki/Zvaigzne" >Vairāk par zvaigznēm lasi šeit!</a>
+    </p>
 
 </body>
 </html>
