--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Libre+Franklin&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <title>Zvaigznes</title>
     <link href="Styles/stylesheet.css" rel="stylesheet" type="text/css">
@@ -12,30 +12,30 @@
 
 <body>
     <div id=navigation>
-    <nav>
-        <a href='#Par-zvaigznem'><button class="navbutton">Apraksts</button></a>
-        <div class="divider"/>
-        <a href='#Kimiskais-sastavs'><button class="navbutton">Ķīmiskais sastāvs</button></a>
-        <div class="divider"/>
-        <a href='#Zvaigznu-muzs'><button class="navbutton">Zvaigžņu mūžs</button></a>
-    </nav>
+        <nav>
+         <a href='#Par-zvaigznem'><button class="navbutton">Apraksts</button></a>
+         <div class="divider"/>
+         <a href='#Kimiskais-sastavs'><button class="navbutton">Ķīmiskais sastāvs</button></a>
+         <div class="divider"/>
+         <a href='#Zvaigznu-muzs'><button class="navbutton">Zvaigžņu mūžs</button></a>
+        </nav>
     </div>
 
-    <main>
+<main>
     <div id="citats">
-    <h1>Smagums mani tur pie zemes, 
+        <h1>Smagums mani tur pie zemes, 
         <br>
         kaut tik daudz zvaigžņu
         <br>
         velk uz savu pusi.</h1>
         <p id="autors">/Antuāns de Sent-Ekziperī/</p>
     </div>
-    </main>
+</main>
 
-    <article>
+<article class="apakstemas">
     <h2 class="hederi" id="Par-zvaigznem">Apraksts</h2>
         <img class="sadalu-bildes" src="Styles\Images\star-h1.jpg" alt="Zvaigzne galaktikā">
-        <p>Zemei tuvākā zvaigzne (neskaitot Sauli) ir Centaura Alfa, kura atrodas nepilnu 4,3 
+            <p>Zemei tuvākā zvaigzne (neskaitot Sauli) ir Centaura Alfa, kura atrodas nepilnu 4,3 
             gaismas gadu attālumā no Zemes. Vislabāk kosmosā izpētītas ir Saulei tuvākās 
             zvaigznes. Savukārt 20 gaismas gadu attālumā Saulei tuvākās ir aptuveni 100 zvaigznes. 
             Tomēr lielie attālumi līdz zvaigznēm mūsdienās nav šķērslis, lai tās izpētītu.
@@ -47,13 +47,13 @@
             Tās atšķiras gan pēc spožuma, gan pēc krāsas — ir zilas, sarkanas, dzeltenas, 
             oranžas zvaigznes. Lielās atšķirības zvaigznēm var noteikt, pētot ar teleskopu. 
             Pētot ar teleskopu, tika atklātas ļoti daudz un dažādas zvaigžņu atšķirības.
-        </p>
-    </article>
+             </p>
+</article>
 
-
+<article class="apakstemas">
     <h2 class="hederi" id="Kimiskais-sastavs">Ķīmiskais sastāvs</h2>
-    <img class="sadalu-bildes" src="Styles\Images\chemicals.jpg" alt="Zvaigžņu ķīmiskais sastāvs">
-    <p>Zvaigznes sastāv no 70% ūdeņraža un 28% hēlija, kā arī no smagākiem elementiem. 
+        <img class="sadalu-bildes" src="Styles\Images\chemicals.jpg" alt="Zvaigžņu ķīmiskais sastāvs">
+        <p>Zvaigznes sastāv no 70% ūdeņraža un 28% hēlija, kā arī no smagākiem elementiem. 
         Daļa smagāko elementu tiek mērīti dzelzs satura izteiksmē zvaigžņu atmosfērā, 
         jo dzelzs ir kopīgs elements un to ir relatīvi viegli izmērīt. Tā kā ir molekulārie mākoņi, 
         kuros zvaigznes ir bagātinātas ar smagākajiem elementiem no pārnovu sprādzieniem, to 
@@ -66,11 +66,12 @@
         dzelzs sastāvs kā Saulei, toties planētai-zvaigznei 14 Herculis dzelzs daudzums ir tikpat 
         kā trīskāršots.
     </p>
+</article>
 
-
-    <h2 class="hederi" id="Zvaigznu-muzs">Zvaigžņu mūžs</h2>
-    <img class="sadalu-bildes" src="Styles\Images\star-fall.jpg" alt="Krītoša zvaigzne">
-    <p>Zvaigžņu mūžs var ilgt miljoniem un pat miljardiem gadu. 
+<article class="apakstemas">
+        <h2 class="hederi" id="Zvaigznu-muzs">Zvaigžņu mūžs</h2>
+        <img class="sadalu-bildes" src="Styles\Images\star-fall.jpg" alt="Krītoša zvaigzne">
+         <p>Zvaigžņu mūžs var ilgt miljoniem un pat miljardiem gadu. 
         <br>
         <br>
         Zvaigznes veidojas no 
@@ -95,11 +96,13 @@
         Melnie caurumi ir ļoti mazi. Visumā veidojas „melnie tukšumi” un tikai spēcīgākas gravitācijas 
         dēļ, var noteikt, ka tur ir melnais caurums. Melnā cauruma tuvumā mainās telpa un laiks. To var 
         ieraudzīt tikai tad, ja tajā krīt viela, kas izstaro.
-    </p>
+         </p>
+</article>
 
+<footer class="apakstemas footer">
     <p>
         <a id="vairak-info" href="https://lv.wikipedia.org/wiki/Zvaigzne" >Vairāk par zvaigznēm lasi šeit!</a>
     </p>
-
+</footer>
 </body>
 </html>
