--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="lv">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,9 +14,9 @@
     <div id=navigation>
         <nav>
          <a href='#Par-zvaigznem'><button class="navbutton">Apraksts</button></a>
-         <div class="divider"/>
+         <div class="divider"></div>
          <a href='#Kimiskais-sastavs'><button class="navbutton">Ķīmiskais sastāvs</button></a>
-         <div class="divider"/>
+         <div class="divider"></div>
          <a href='#Zvaigznu-muzs'><button class="navbutton">Zvaigžņu mūžs</button></a>
         </nav>
     </div>
@@ -34,7 +34,7 @@
 
 <article class="apakstemas">
     <h2 class="hederi" id="Par-zvaigznem">Apraksts</h2>
-        <img class="sadalu-bildes" src="Styles\Images\star-h1.jpg" alt="Zvaigzne galaktikā">
+        <img class="sadalu-bildes" src="Styles/Images/star-h1.jpg" alt="Zvaigzne galaktikā">
             <p>Zemei tuvākā zvaigzne (neskaitot Sauli) ir Centaura Alfa, kura atrodas nepilnu 4,3 
             gaismas gadu attālumā no Zemes. Vislabāk kosmosā izpētītas ir Saulei tuvākās 
             zvaigznes. Savukārt 20 gaismas gadu attālumā Saulei tuvākās ir aptuveni 100 zvaigznes. 
@@ -52,7 +52,7 @@
 
 <article class="apakstemas">
     <h2 class="hederi" id="Kimiskais-sastavs">Ķīmiskais sastāvs</h2>
-        <img class="sadalu-bildes" src="Styles\Images\chemicals.jpg" alt="Zvaigžņu ķīmiskais sastāvs">
+        <img class="sadalu-bildes" src="Styles/Images/chemicals.jpg" alt="Zvaigžņu ķīmiskais sastāvs">
         <p>Zvaigznes sastāv no 70% ūdeņraža un 28% hēlija, kā arī no smagākiem elementiem. 
         Daļa smagāko elementu tiek mērīti dzelzs satura izteiksmē zvaigžņu atmosfērā, 
         jo dzelzs ir kopīgs elements un to ir relatīvi viegli izmērīt. Tā kā ir molekulārie mākoņi, 
@@ -70,7 +70,7 @@
 
 <article class="apakstemas">
         <h2 class="hederi" id="Zvaigznu-muzs">Zvaigžņu mūžs</h2>
-        <img class="sadalu-bildes" src="Styles\Images\star-fall.jpg" alt="Krītoša zvaigzne">
+        <img class="sadalu-bildes" src="Styles/Images/star-fall.jpg" alt="Krītoša zvaigzne">
          <p>Zvaigžņu mūžs var ilgt miljoniem un pat miljardiem gadu. 
         <br>
         <br>
