--- a/index.html
+++ b/index.html
@@ -11,26 +11,26 @@
 </head>
 
 <body>
-    <div id=navigation>
-        <nav>
+<div id="landing">
+    <nav id=navigation>
          <a href='#Par-zvaigznem'><button class="navbutton">Apraksts</button></a>
          <div class="divider"></div>
          <a href='#Kimiskais-sastavs'><button class="navbutton">Ķīmiskais sastāvs</button></a>
          <div class="divider"></div>
          <a href='#Zvaigznu-muzs'><button class="navbutton">Zvaigžņu mūžs</button></a>
-        </nav>
-    </div>
+    </nav>
 
 <main>
-    <div id="citats">
+    <header id="citats">
         <h1>Smagums mani tur pie zemes, 
         <br>
         kaut tik daudz zvaigžņu
         <br>
         velk uz savu pusi.</h1>
         <p id="autors">/Antuāns de Sent-Ekziperī/</p>
-    </div>
-</main>
+    </header>
+</div>
+
 
 <article class="apakstemas">
     <h2 class="hederi" id="Par-zvaigznem">Apraksts</h2>
@@ -99,10 +99,19 @@
          </p>
 </article>
 
-<footer class="apakstemas footer">
-    <p>
-        <a id="vairak-info" href="https://lv.wikipedia.org/wiki/Zvaigzne" >Vairāk par zvaigznēm lasi šeit!</a>
-    </p>
+<p id="vairak-par-zvaigznem">
+    <a id="vairak-info" href="https://lv.wikipedia.org/wiki/Zvaigzne" >Vairāk par zvaigznēm lasi šeit!</a>
+</p>
+
+</main>
+
+<a href="index.html">
+<img id="img-uz-sakumu" src="Styles/Images/button-up.png" alt="Poga, lai nokļūtu uz sākumu">
+</a>
+
+<footer>
+<h3>Lapu izstrādāja: Kristīne Briede</h3>
 </footer>
+
 </body>
 </html>
