--- a/index.html
+++ b/index.html
@@ -13,11 +13,9 @@
 <body>
 <div id="landing">
     <nav id=navigation>
-         <a href='#Par-zvaigznem'><button class="navbutton">Apraksts</button></a>
-         <div class="divider"></div>
-         <a href='#Kimiskais-sastavs'><button class="navbutton">Ķīmiskais sastāvs</button></a>
-         <div class="divider"></div>
-         <a href='#Zvaigznu-muzs'><button class="navbutton">Zvaigžņu mūžs</button></a>
+         <a href='#Par-zvaigznem' id="poga-apraksts" class="navbutton2">Apraksts</a>
+         <a href='#Kimiskais-sastavs' class="navbutton2">Ķīmiskais sastāvs</a>
+         <a href='#Zvaigznu-muzs' id="poga-muzs"class="navbutton2">Zvaigžņu mūžs</a>
     </nav>
 
 
