--- a/index.html
+++ b/index.html
@@ -51,7 +51,12 @@
 <article class="apakstemas">
     <h2 class="hederi" id="Kimiskais-sastavs">Ķīmiskais sastāvs</h2>
         <img class="sadalu-bildes" src="Styles/Images/chemicals.jpg" alt="Zvaigžņu ķīmiskais sastāvs">
-        <p>Zvaigznes sastāv no 70% ūdeņraža un 28% hēlija, kā arī no smagākiem elementiem. 
+        <p>Zvaigznes sastāv no:
+            <ul>
+                <li>70% ūdeņraža</li> 
+                <li>hēlija</li>
+                <li>citiem smagāku elementu piejaukiem</li>
+            </ul>
         Daļa smagāko elementu tiek mērīti dzelzs satura izteiksmē zvaigžņu atmosfērā, 
         jo dzelzs ir kopīgs elements un to ir relatīvi viegli izmērīt. Tā kā ir molekulārie mākoņi, 
         kuros zvaigznes ir bagātinātas ar smagākajiem elementiem no pārnovu sprādzieniem, to 
