--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
 <article class="apakstemas">
     <h2 class="hederi" id="Kimiskais-sastavs">Ķīmiskais sastāvs</h2>
         <img class="sadalu-bildes" src="Styles/Images/chemicals.jpg" alt="Zvaigžņu ķīmiskais sastāvs">
-        <p>Zvaigznes sastāv no:
+        <p>Zvaigznes sastāv no:</p>
             <ul>
                 <li>70% ūdeņraža</li> 
                 <li>hēlija</li>
                 <li>citiem smagāku elementu piejaukiem</li>
             </ul>
-        Daļa smagāko elementu tiek mērīti dzelzs satura izteiksmē zvaigžņu atmosfērā, 
+        <p>Daļa smagāko elementu tiek mērīti dzelzs satura izteiksmē zvaigžņu atmosfērā, 
         jo dzelzs ir kopīgs elements un to ir relatīvi viegli izmērīt. Tā kā ir molekulārie mākoņi, 
         kuros zvaigznes ir bagātinātas ar smagākajiem elementiem no pārnovu sprādzieniem, to 
         zvaigžņu ķīmisko sastāvu noteikšana var tikt lietota kā zvaigžņu vecuma noteikšana. 
@@ -68,7 +68,7 @@
         Kā pretstats, zvaigznei, kas pārbagāta ar metāliem μ Leonis ir tikpat kā dubultliels 
         dzelzs sastāvs kā Saulei, toties planētai-zvaigznei 14 Herculis dzelzs daudzums ir tikpat 
         kā trīskāršots.
-    </p>
+        </p>
 </article>
 
 <article class="apakstemas">
