--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="lv">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Libre+Franklin&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
@@ -37,15 +37,17 @@
             gaismas gadu attālumā no Zemes. Vislabāk kosmosā izpētītas ir Saulei tuvākās 
             zvaigznes. Savukārt 20 gaismas gadu attālumā Saulei tuvākās ir aptuveni 100 zvaigznes. 
             Tomēr lielie attālumi līdz zvaigznēm mūsdienās nav šķērslis, lai tās izpētītu.
-            <br>
-            <br>
-            Dažas zvaigznes Visumā ir ļoti līdzīgas Saulei, citas ir savādākas. 
-            <br>
-            <br>
-            Tās atšķiras gan pēc spožuma, gan pēc krāsas — ir zilas, sarkanas, dzeltenas, 
-            oranžas zvaigznes. Lielās atšķirības zvaigznēm var noteikt, pētot ar teleskopu. 
+            Dažas zvaigznes Visumā ir ļoti līdzīgas Saulei, citas ir savādākas.</p> 
+            <p>Tās atšķiras gan pēc spožuma, gan pēc krāsas. Ir šādu krāsu zvaigznes:</p>
+            <ol>
+                <li>zilas</li>
+                <li>sarkanas</li>
+                <li>dzeltenas</li>
+                <li>oranžas</li>
+            </ol>
+            <p>Lielās atšķirības zvaigznēm var noteikt, pētot ar teleskopu. 
             Pētot ar teleskopu, tika atklātas ļoti daudz un dažādas zvaigžņu atšķirības.
-             </p>
+            </p>
 </article>
 
 <article class="apakstemas">
