--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 <body>
 <div id="landing">
     <nav id=navigation>
-         <a href='#Par-zvaigznem' id="poga-apraksts" class="navbutton2">Apraksts</a>
-         <a href='#Kimiskais-sastavs' class="navbutton2">Ķīmiskais sastāvs</a>
+         <a href='#Par-zvaigznem' id="poga-apraksts" class="navbutton2">Par zvaigznēm</a>
+         <a href='#Kimiskais-sastavs' class="navbutton2">Zvaigžņu ķīmiskais sastāvs</a>
          <a href='#Zvaigznu-muzs' id="poga-muzs" class="navbutton2">Zvaigžņu mūžs</a>
     </nav>
 
 
-    <header id="citats">
+    <header>
         <h1>Smagums mani tur pie zemes, 
         <br>
         kaut tik daudz zvaigžņu
