--- a/index.html
+++ b/index.html
@@ -49,7 +49,11 @@
             Pētot ar teleskopu, tika atklātas ļoti daudz un dažādas zvaigžņu atšķirības.
             </p>
 </article>
-
+<br>
+<a href="index.html">
+    <img id="img-uz-sakumu" src="Styles/Images/button-up.png" alt="Poga, lai nokļūtu uz sākumu">
+    </a>
+<br>
 <article class="apakstemas">
     <h2 class="hederi" id="Kimiskais-sastavs">Ķīmiskais sastāvs</h2>
         <img class="sadalu-bildes" src="Styles/Images/chemicals.jpg" alt="Zvaigžņu ķīmiskais sastāvs">
@@ -72,7 +76,11 @@
         kā trīskāršots.
         </p>
 </article>
-
+<br>
+<a href="index.html">
+    <img id="img-uz-sakumu" src="Styles/Images/button-up.png" alt="Poga, lai nokļūtu uz sākumu">
+    </a>
+<br>
 <article class="apakstemas">
         <h2 class="hederi" id="Zvaigznu-muzs">Zvaigžņu mūžs</h2>
         <img class="sadalu-bildes" src="Styles/Images/star-fall.jpg" alt="Krītoša zvaigzne">
@@ -103,7 +111,7 @@
         ieraudzīt tikai tad, ja tajā krīt viela, kas izstaro.
          </p>
 </article>
-
+<br>
 <p id="vairak-par-zvaigznem">
     <a id="vairak-info" href="https://lv.wikipedia.org/wiki/Zvaigzne" >Vairāk par zvaigznēm lasi šeit!</a>
 </p>
