--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 </article>
 <br>
 <a href="index.html">
-    <img id="img-uz-sakumu" src="Styles/Images/button-up.png" alt="Poga, lai nokļūtu uz sākumu">
+    <img class="img-uz-sakumu" src="Styles/Images/button-up.png" alt="Poga, lai nokļūtu uz sākumu">
     </a>
 <br>
 <article class="apakstemas">
@@ -78,7 +78,7 @@
 </article>
 <br>
 <a href="index.html">
-    <img id="img-uz-sakumu" src="Styles/Images/button-up.png" alt="Poga, lai nokļūtu uz sākumu">
+    <img class="img-uz-sakumu" src="Styles/Images/button-up.png" alt="Poga, lai nokļūtu uz sākumu">
     </a>
 <br>
 <article class="apakstemas">
@@ -119,7 +119,7 @@
 </main>
 
 <a href="index.html">
-<img id="img-uz-sakumu" src="Styles/Images/button-up.png" alt="Poga, lai nokļūtu uz sākumu">
+<img class="img-uz-sakumu" src="Styles/Images/button-up.png" alt="Poga, lai nokļūtu uz sākumu">
 </a>
 
 <footer>
