--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+<a name="top"></a>
 <div id="landing">
     <nav id=navigation>
          <a href='#Par-zvaigznem' id="poga-apraksts" class="navbutton2">Par zvaigznēm</a>
@@ -50,7 +51,7 @@
             </p>
 </article>
 <br>
-<a href="index.html">
+<a href="#top">
     <img class="img-uz-sakumu" src="Styles/Images/button-up.png" alt="Poga, lai nokļūtu uz sākumu">
     </a>
 <br>
@@ -77,7 +78,7 @@
         </p>
 </article>
 <br>
-<a href="index.html">
+<a href="#top">
     <img class="img-uz-sakumu" src="Styles/Images/button-up.png" alt="Poga, lai nokļūtu uz sākumu">
     </a>
 <br>
@@ -118,7 +119,7 @@
 
 </main>
 
-<a href="index.html">
+<a href="#top">
 <img class="img-uz-sakumu" src="Styles/Images/button-up.png" alt="Poga, lai nokļūtu uz sākumu">
 </a>
 
